updated some css for phone browser to avoid covering content

--- a/src/components/sections/about.module.css
+++ b/src/components/sections/about.module.css
@@ -1,7 +1,6 @@
 .portrait-container {
   display: flex;
   justify-content: center;
-  margin-bottom: -2vh;
 }
 
 .portrait {
@@ -9,7 +8,6 @@
   box-shadow: 0 3px 20px rgb(0 0 0 / 0.5);
   animation: shifting-borders 60s ease-in-out infinite both alternate;
   position: relative;
-  top: -50px;
   height: auto;
   z-index: -1;
 }
